objects/copado__Feature_Toggle_Group__mdt.object
<CustomObject>
    <fields>
        <fullName>copado__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Icon_Name__c</fullName>
        <inlineHelpText>Icon Name is a SLDS Utility Icon used to represent feature toggle group. Please enter SLDS Utility Icon Name for e.g. utility:user. Read more about icons on Salesforce Lightning Design System documentation.</inlineHelpText>
        <label>Icon Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier</fullName>
                    <default>true</default>
                    <label>Tier</label>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Feature Toggle Group</label>
    <listViews>
        <fullName>copado__All_Feature_Toggle_Groups</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>copado__Order__c</columns>
        <columns>copado__Description__c</columns>
        <columns>copado__Type__c</columns>
        <columns>copado__Icon_Name__c</columns>
        <columns>NamespacePrefix</columns>
        <filterScope>Everything</filterScope>
        <label>All Feature Toggle Groups</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Feature Toggle Groups</pluralLabel>
</CustomObject>